Fix item height overflow pt 3

--- a/src/style.css
+++ b/src/style.css
@@ -63,7 +63,8 @@ body {
 
 .item {
     flex-basis: 20vw;
-    min-height: 75vh;
+    height: auto;
+    min-height: 650px;
     min-width: 350px;
     border: 2px solid white;
     border-radius: 10px;
